# thymio-blockly-standalone

./: .gitmodules  CMakeLists.txt  COPYING  README.md  azure-pipelines.yml  build.py  build.sh  convert_script_path.py  index.html  package-lock.json  package.json  webpack.config.js
media/: desktop.ini
src/: blockly_override.js  thymio_blockly.js
thymio_blockly/: index.html  thymio_blockly.de.html  thymio_blockly.en.html  thymio_blockly.es.html  thymio_blockly.fr.html  thymio_blockly.html  thymio_blockly.it.html  thymio_blockly.pl.html  thymio_blockly.zh-cn.html  thymio_blockly.zh.html
thymio_blockly/css/: style.css
thymio_blockly/js/: blockly_override.js  thymio_blockly.js
